# tensorflow

./: README.md  capi.c  capi.go  capi_test.go  example_test.go  hello.go  tensorflow.go  tensorflow_test.go
internal/tensorflow-cxx/: CMakeLists-protobuf.txt  CMakeLists.txt  build-debug-proj-mt.bat  hello.cc  tensor_c_api_dummy.c  update-pb.bat
internal/tensorflow-cxx/tensorflow/core/framework/: allocator.h  config.pb.cc  config.pb.h  graph.pb.cc  graph.pb.h
internal/tensorflow-cxx/tensorflow/core/platform/default/: mutex.h
tensorflow/: capi.c  capi.go  tensorflow.go
